[Style] Fixes uncentred text on mobile portfolio. Fixes #185.

--- a/source/css/_portfolio.less
+++ b/source/css/_portfolio.less
@@ -24,6 +24,12 @@
       padding-left: 15px;
       font-weight: 400;
       text-decoration: none;
+
+      display: none;
+
+      @media (min-width: 768px) {
+        display: inline;
+      }
     }
 
     &:hover {
